# ethernet-ip-adapter

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLI-DOGFOODING.md  Cargo.toml  DESIGN-cip-security.md  DESIGN.md  Dockerfile  LICENSE  PROTOCOL-DESIGN.md  README.md  build.sh  compose.yaml  config.schema.json  gdk-config.json  recipe.yaml
.github/workflows/: ci.yml
crates/enip/: Cargo.toml
crates/enip/fuzz/: .gitignore  Cargo.toml
crates/enip/fuzz/corpus/fuzz_assembly_decode/: bool_bits  dint_field
crates/enip/fuzz/corpus/fuzz_cip_value/: tagged_dint  tagged_struct
crates/enip/fuzz/corpus/fuzz_cpf/: sequenced  sockaddr
crates/enip/fuzz/corpus/fuzz_discovery/: identity_cpf  services
crates/enip/fuzz/corpus/fuzz_encap_frame/: list_identity  oversized_len  read_tag_reply  register_reply
crates/enip/fuzz/corpus/fuzz_forward_open_reply/: fail  fail_withpath  success
crates/enip/fuzz/corpus/fuzz_io_frame/: o2t_header32  t2o_modeless
crates/enip/fuzz/corpus/fuzz_message_reply/: dint_ok  lying_ext  missing
crates/enip/fuzz/corpus/fuzz_security_attrs/: cert_name_shortstring  cipher_suite_list
crates/enip/fuzz/corpus/fuzz_tag_list/: bad_utf8_name  one_record  truncated
crates/enip/fuzz/corpus/fuzz_tag_path/: array  multidim  program  scalar
crates/enip/fuzz/fuzz_targets/: fuzz_assembly_decode.rs  fuzz_cip_value.rs  fuzz_cpf.rs  fuzz_discovery.rs  fuzz_encap_frame.rs  fuzz_forward_open_reply.rs  fuzz_io_frame.rs  fuzz_message_reply.rs  fuzz_security_attrs.rs  fuzz_tag_list.rs  fuzz_tag_path.rs
crates/enip/src/: assembly.rs  cm.rs  cpf.rs  discovery.rs  error.rs  harness.rs  io.rs  lib.rs  logix.rs  testserver.rs  wire.rs
crates/enip/src/cip/: epath.rs  message.rs  mod.rs  security.rs  services.rs  status.rs  types.rs
crates/enip/src/client/: connected.rs  io_service.rs  mod.rs  session.rs  tls.rs
crates/enip/src/encap/: codec.rs  mod.rs
crates/enip/tests/: conformance.rs  fuzz_corpus.rs  live_ab_server.rs  live_cip_security.rs  live_cpppo.rs  live_ethernetipsharp.rs  live_opener.rs  live_tls.rs  security_posture.rs  session_p2.rs  units.rs  vectors.rs
crates/ethernet-ip-adapter/: Cargo.toml  config.schema.json
crates/ethernet-ip-adapter/src/: app.rs  commands.rs  config.rs  device.rs  main.rs  metrics.rs  poll.rs  poll_driver.rs  publish.rs  publish_sink.rs  push.rs  push_driver.rs  sim.rs  supervisor.rs  testutil.rs
crates/ethernet-ip-adapter/src/eip/: est.rs  live.rs  mod.rs  push.rs  rotation.rs  session.rs  tls.rs  types.rs
crates/ethernet-ip-adapter/src/eip/est/: tests.rs
crates/ethernet-ip-adapter/test-configs/: config-cpppo.json  config-push.json  config-tls.json  config.json
docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  tutorial.md
docs/reference/: configuration.md  data-types.md  messaging-interface.md  metrics.md
k8s/: configmap.yaml  deployment.yaml
src/: app.rs  device.rs  main.rs
supervisor/: component.conf
test-configs/: config.json  standalone-messaging.json
test-infra/ab-server/: Dockerfile
test-infra/enip-tls/: .gitignore  Dockerfile  gen-certs.sh  stunnel-cbc.conf  stunnel.conf
test-infra/est/: .gitignore  Dockerfile  config.json  gen-certs.sh
test-infra/ethernetip-sharp/: Dockerfile  Program.cs
test-infra/opener/: Dockerfile
test-infra/opener-cipsecurity/: Dockerfile
