# EtherNet/IP adapter — Cargo workspace (D-EIP-17 / PROTOCOL-DESIGN §3.1).
#
# Two members, mirroring the `core/cli` convention:
#   crates/enip                 the OWNED pure-Rust EtherNet/IP + CIP protocol library
#                               (package `ec-enip`, lib `enip`) — knows NOTHING about EdgeCommons.
#   crates/ethernet-ip-adapter  the adapter binary — the edgecommons component that consumes the
#                               protocol crate through its `device.rs` seam (from slice S3).
#
# Build artifacts land in the workspace `target/` at this root, so the Dockerfile / build.sh /
# supervisor paths keep working with the build-context adjustments in DESIGN.md §13. CI runs
# `cargo test` / `cargo llvm-cov` workspace-wide — the protocol crate is inside the 90% gate.
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2021"
# Matches the edgecommons library's MSRV (edition-2024 crate).
rust-version = "1.85"
license = "BUSL-1.1"

# Shared dependency versions. Members opt in with `<dep> = { workspace = true, features = [...] }`,
# so a version bump happens once, here. The enip protocol-crate deps (tokio-util/bytes/rand) are
# seeded so P1 references them by `{ workspace = true }` without re-pinning.
[workspace.dependencies]
# edgecommons Rust library — pinned by git rev. The gitignored `.cargo/config.toml` patches this to
# the local sibling checkout for dev; CI builds the pinned rev. The `enip` crate never depends on it.
edgecommons = { git = "https://github.com/edgecommons/edgecommons", rev = "91d93d8bca6400615db6f64f6120efc55fc75a1a", default-features = false }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
bytes = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
anyhow = { version = "1" }
async-trait = { version = "0.1" }
thiserror = { version = "2" }
rand = { version = "0.8" }
tempfile = { version = "3" }
