[package]
name = "ethernet-ip-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust reference southbound EtherNet/IP adapter (Allen-Bradley CIP tag read/write) for the EdgeCommons ecosystem."
publish = false

[[bin]]
name = "ethernet-ip-adapter"
path = "src/main.rs"

# Runtime selection mirrors the edgecommons library:
#   - `standalone` (default): dual-broker MQTT — runs on a laptop/container, no C
#     toolchain. Use this for `cargo run` / `cargo test` during development.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (the SDK is a
#     C-FFI crate needing libclang). `build.sh` builds the artifact with this feature.
[features]
default = ["standalone"]
standalone = ["edgecommons/standalone"]
greengrass = ["edgecommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData); combine with `greengrass`.
cloudwatch = ["edgecommons/cloudwatch"]

[dependencies]
# The edgecommons Rust library (pinned rev + features via the workspace). The `.cargo/config.toml`
# path override redirects it to the local sibling checkout for dev; CI uses the pinned rev.
edgecommons = { workspace = true }
# The owned pure-Rust EtherNet/IP + CIP protocol crate (package `ec-enip`, lib `enip`;
# PROTOCOL-DESIGN, D-EIP-17). Consumed here (S2) so the push `io` config builds a validated
# `enip::AssemblyLayout` at config-parse time; the eip/ backend consumes the rest of its surface
# through the device.rs seam in slice S3.
ec-enip = { path = "../enip" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "io-util", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# RFC-3339 timestamps for the explicit `serverTs` stamped on the older samples of a coalesced batch
# (§6.2). Already in the lock (a transitive edgecommons dep); pinned here for the direct use.
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = { workspace = true }
# The eip poll-backend unit tests drive `enip::EipClient::connect_over` over a `tokio::io::duplex`
# fixture and hand-craft CIP reply frames (Bytes) — no socket, no PLC (S3, §12.3).
bytes = { workspace = true }
# Validates the worked test-configs against config.schema.json in a unit test (the schema is a
# published contract; a drift between it and the parser is a defect). Already in the workspace lock.
jsonschema = "0.46"
