[package]
name = "ethernet-ip-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust reference southbound EtherNet/IP adapter (Allen-Bradley CIP tag read/write) for the EdgeCommons ecosystem."
publish = false

[[bin]]
name = "ethernet-ip-adapter"
path = "src/main.rs"

# Runtime selection mirrors the edgecommons library:
#   - `standalone` (default): dual-broker MQTT — runs on a laptop/container, no C
#     toolchain. Use this for `cargo run` / `cargo test` during development.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (the SDK is a
#     C-FFI crate needing libclang). `build.sh` builds the artifact with this feature.
[features]
default = ["standalone"]
standalone = ["edgecommons/standalone"]
greengrass = ["edgecommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData); combine with `greengrass`.
cloudwatch = ["edgecommons/cloudwatch"]

[dependencies]
# The edgecommons Rust library (pinned rev + features via the workspace). The `.cargo/config.toml`
# path override redirects it to the local sibling checkout for dev; CI uses the pinned rev.
# `credentials` (pure-Rust vault, builds natively on Windows) is enabled so the CIP Security TLS path
# can source cert/key/CA material from `gg.credentials()` and resolve `{"$secret": …}` refs.
edgecommons = { workspace = true, features = ["credentials"] }
# The owned pure-Rust EtherNet/IP + CIP protocol crate (package `ec-enip`, lib `enip`;
# PROTOCOL-DESIGN, D-EIP-17). Consumed here (S2) so the push `io` config builds a validated
# `enip::AssemblyLayout` at config-parse time; the eip/ backend consumes the rest of its surface
# through the device.rs seam in slice S3. The `tls` feature (CIP Security Phase 1) is enabled so a
# `mode: tls` connection wraps the explicit session in TLS (DESIGN-cip-security.md).
ec-enip = { path = "../enip", features = ["tls"] }
# rustls (ring provider, no aws-lc-rs/NASM) — the adapter BUILDS the `rustls::ClientConfig` from the
# `connection.security` block + vault material and hands it to `enip::connect_tls` (isolation split,
# DESIGN-cip-security.md §3.2). Same rustls 0.23 the `enip` `tls` feature re-exports, so the types unify.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# Read the client leaf certificate's notAfter + peer subject for the `sb/status` security surface
# (pure-Rust X.509 decode; no C).
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
# CIP Security Phase 2c — EST (RFC 7030) client for automatic originator-cert enrollment/renewal
# (DESIGN-cip-security.md §4.3, D-EIP-24). All pure Rust, no C — severable and OFF unless
# `connection.security.est.enabled` is set:
#   rcgen        — generate the adapter's client keypair + PKCS#10 CSR (ring backend, no C).
#   tokio-rustls — async TLS to the EST server (same rustls 0.23 / ring the rest of the adapter uses).
#   cms + der    — parse the `application/pkcs7-mime` (certs-only degenerate SignedData) enroll reply.
#   base64       — the `application/pkcs10` CSR body + the PKCS#7 reply are base64 on the wire (RFC 7030).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
cms = { version = "0.2", default-features = false, features = ["std"] }
der = { version = "0.7", default-features = false, features = ["std"] }
base64 = "0.22"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "io-util", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# RFC-3339 timestamps for the explicit `serverTs` stamped on the older samples of a coalesced batch
# (§6.2). Already in the lock (a transitive edgecommons dep); pinned here for the direct use.
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = { workspace = true }
# The eip poll-backend unit tests drive `enip::EipClient::connect_over` over a `tokio::io::duplex`
# fixture and hand-craft CIP reply frames (Bytes) — no socket, no PLC (S3, §12.3).
bytes = { workspace = true }
# `test-util` (paused-clock tests) for the adapter's own test suite.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
# The TLS ClientConfig-builder tests mint throwaway CA/client certs in-memory (pure Rust, ring).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# Validates the worked test-configs against config.schema.json in a unit test (the schema is a
# published contract; a drift between it and the parser is a defect). Already in the workspace lock.
jsonschema = "0.46"
